# pos_tagging

./: README.md  make_submission_file.py  make_word_only_file.py  pyproject.toml  setup.cfg  train.py
configs/: baseline.json  neural_network.json
data/wsj/: wsj22-24.txt
pos_tagging/: pos_tagger.py  read_wsj_data.py  trainer.py  vocabulary.py
pos_tagging/common/: functions.py  gradient.py  layers.py
pos_tagging/feature_extractors/: __init__.py  context_word_extractor.py  feature_extractor.py  is_digit.py  is_ends_with_ance.py  is_ends_with_cy.py  is_ends_with_ee.py  is_ends_with_er.py  is_ends_with_ing.py  is_ends_with_ment.py  is_ends_with_or.py  is_ends_with_s.py  is_ends_with_sion.py  is_ends_with_sis.py  is_ends_with_tion.py  is_ends_with_ty.py  is_title.py  is_upper.py
pos_tagging/models/: model.py  multi_class_perceptron.py  neural_network.py
pos_tagging/utils/: import_util.py  registrable.py
results/baseline/: config.json  feature_vocabulary.txt  metrics.json  tag_vocabulary.txt  wsj22-24.prediction.pos
tests/: test_pos_tagger.py
tests/feature_extractors/: test_context_word_extractor.py  test_is_something_extractor.py
tests/fixtures/: config.json
