[tool.poetry]
name = "pos_tagging"
version = "0.1.0"
description = ""
authors = ["Ryokan Ri <ryou0634@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
tqdm = "^4.64.0"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
isort = "^5.10.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
